# AdvancedProgramming

./: README.md
Advanced/: Bibtexts.h  CMakeLists.txt  Database.cpp  UI.cpp  article.cpp  book.cpp  inproceedings.cpp  listb.bib  main.cpp  mybib.bib  mybib2.bib  newrecord.bib  testlist.txt  wrongbib.bib
